2012-04-19  1.1
    * Fix NPE writing with partially empty hotbar

2012-03-07  1.0
    * Ignore cancelled events
    * Test on CraftBukkit 1.2.5-R1.0

2012-01-05  0.3
    * Add magic ink decoder
    * Add left-click paper to read
    * Add autoRead option (default true) to control reading when item is selected in player's inventory slot
    * New license (BSD)

2012-01-26  0.2
    * Update for CraftBukkit 1.1-R1

2012-01-20  0.1 beta
    * Initial release
